solved problem of jump/accordeon/team

--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -25,9 +25,12 @@
 }
 
 .team__container {
+	// position: absolute;
 	width: 100%;
-	min-height:450px;
+	// min-height:450px;
 	transition: all 0.4s;
+// padding:3%;
+
 	&__item {
 		width: 100%;
 		margin-bottom: rem(40px);
@@ -35,18 +38,17 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
-		
-	@include tablets {
-	width:75%;
-	}
+	
 	}
 
 	@include tablets {
 		display: flex;
+		// width:75%;
 		align-items: center;
-		justify-content: center;
+		// justify-content: center;
 		flex-direction: column;
-		min-height:em(300px);
+		// min-height:rem(300px);
+	
 	}
 }
 
@@ -54,20 +56,21 @@
 	width:90%;
 	display: inline-flex;
 	flex-direction: column;
-	justify-content: center;
+	min-height:rem(400px);
 	align-items: center;
-
+	
 	@include tablets {
 		display: inline-flex;
 		flex-direction: column;
-		justify-content: center;
+		text-align:center;
+		vertical-align:middle;
 		align-items: center;
 	}
 }
 
 .team__item {
 	width: 90%;
-	margin-bottom:3%;
+ margin-bottom:2%;
 	&:last-child{
 		margin-bottom:0;
 	}
@@ -92,7 +95,6 @@
 	line-height: rem(24px);
 	font-size:rem(15px);
 
-
 	@include tablets {
 		align-items:center;
 		margin: auto;
@@ -102,13 +104,11 @@
 }
 
 .team__trigger  {
-	font-size: rem(20px);
+	font-size: rem(24px);
 	font-family: 'gagalinregular';
-	line-height: rem(28px);
+	// line-height: rem(28px);
 	color: $white;
 	position: relative;
-	margin-bottom: 2%;
-	
 
 }
 
@@ -130,7 +130,7 @@
 	text-align: center;
 	align-items: center;
 	justify-content: center;
-
+	margin-right:10px;
 	@include tablets {
 		text-align:center;
 		display:flex;
@@ -156,13 +156,10 @@
 	}
 }
 
-.team__text {
-	justify-content: flex-start;
-width:75%;
-}
+
 
 .team__occ {
-	width:80%;
+	width:65%;
 	flex-direction:column;
 
 	@include tablets {
@@ -172,7 +169,7 @@ width:75%;
 		justify-content:center;
 	}
 	@include phones {
-		width:75%;
+		// width:75%;
 		text-align:center;
 	}
 }
@@ -191,23 +188,32 @@ width:75%;
 		left: -18%;
 		top: -5px;
 	}
+	@include phones{
+		left: -18%;
+		top: -5px;
+	}
 }
 
 .active .triangle{
+	display: block;
+	position: absolute;
 	border: rem(5px) solid transparent;
 	border-bottom: rem(8px) solid $yellow;
 	margin: 0.64286rem 1.42857rem 0 0;
+	position: absolute;
 	left: -5%;
 	top: -5px;
+	width: 0;
+	height: 0;
 	color: $yellow;
 
 	@include tablets{
-		left: 32%;
+		left: 28%;
 		top: -5px;
 	}
 
 	@include phones{
-		left: 25%;
+	left: 18%;
 		top: -5px;
 	}
 }
